<resources>
    <string name="level1_intro_welcome_title">Level 1: Introduction</string>
    <string name="level1_intro_welcome">Welcome to the first level of GuitarPal! The lessons, tips and tools in this app will introduce you to the basics of the guitar and start you on your way to becoming an accomplished guitar player. \nThere is 5 lessons in each level and a knowledge test at the end of each level that you must pass in order to unlock the next level. \n\nYou must get at least 80% on each test to pass! Sounds tricky? FEAR NOT! Read through the lessons and you will pass with flying colours!\n\nYou can take the test now by clicking below! Although if you\'re new, I\'d advise you swipe through and read the lessons first!</string>
    <string name="level1_intro">In level 1, we will be introduced to the various parts of the guitar, how to hold a guitar and hold a plectrum. So swipe the screen to the left and lets begin!</string>
    <string name="level1_lesson5_title">Lesson 5: Names of the Guitar Strings</string>
    <string name="level1_lesson5_tv1">In order to be a guitarist, it\'s absolutely crucial that you memorize the 6 strings on a guitar. Well then, what are they?</string>
    <string name="level1_lesson5_tv2">The thickest string is called the 6th string. In standard guitar tuning, this is tuned to E. We often refer to this as the \‘low E string\‘. This is the deepest/lowest guitar note you can play.
                                        \n\nThe 5th string is tuned to A, so it\’s usually referred to as the A string.
                                        \n\nThe 4th string is tuned to D, so it\’s usually referred to as the D string.
                                        \n\nThe 3rd string is tuned to G, so it\’s usually referred to as the G string.
                                        \n\nThe 2nd string is tuned to B, so it\’s usually referred to as the B string.
                                        \n\nThe 1st string is tuned to E. This is the thinnest of all the strings. We often refer to this as the \‘high E string\’.</string>
     <string name="level1_lesson5_tv3">\n\nHow to remember the guitar string names? The easiest way to remember the guitar string names is to use a mnemonic. The sillier the better! Here\’s a couple of fun ways to remember this:
                                        \n\n(Going from the thickest string to the thinnest…)
                                        \n\n<b>Elephants</b>
                                        \n\n<b>And</b>
                                        \n\n<b>Donkeys</b>
                                        \n\n<b>Grow</b>
                                        \n\n<b>Big</b>
                                        \n\n<b>Ears</b></string>
    <string name="level2_intro_title">Level 2: Introduction</string>
    <string name="level2_intro_tv1">Welcome to the second level of GuitarPal!</string>
    <string name="level2_intro_tv2">\nIn this level, we will be introduced to various extremely important aspects of playing guitar such as how to tune a guitar, getting to know the fretboard and how to read chord charts and guitar tabs. So swipe the screen to the left and lets begin!\n\n Or alternatively you can take the level 2 test now!</string>
    <string name="level2_lesson2_title">Lesson 2: How to Restring a Guitar</string>
    <string name="level2_lesson2_tv1">You may need to restring your guitar from time to time. This may because a string may break or maybe the strings just need changing if they get dull and dirty. Here we look at how to change strings for both an electric and an acoustic guitar.</string>
    <string name="level2_lesson2_tv2">\n<b>Standard electric guitars</b>
                                \n\n1.	Unwind all of the machineheads and remove the old strings. This can be made easier with string winders and string cutters.
                                \n\n2.	Place the new string through the hole in the bridge. This is usually accessed on the reverse side of the body.
                                \n\n3.	Thread the string through the string-post then cut the string, leaving 5cm (approx.) of length spare.
                                \n\n4.	Wrap the string around the tuning peg then tighten the machinehead, leaving some slack on the string. Tighten until the string supports itself.
                                \n\n5.	Repeat steps 2-4 for all of the strings.
                                \n\n6.	Tune each string to the correct pitch.
                                \n\n7.	Stretch each string by pulling it away from the fretboard.
                                \n\n8.	Tune each string to the correct pitch again. If you find that the strings are slipping out of tune repeat steps 7 and 8. This should stabilise the tuning.
                                \n\n<b>Acoustic/classical guitars</b>
                                \n\n1.	Unwind one of the machineheads and remove the old string. This can be made easier with string winders and string cutters.
                                \n\n2.	Tie the new string to the bridge, making sure you mimic the method used to tie the old strings (this is why you should change just one string to start with).
                                \n\n3.	Thread the new string through the string-post then cut the string, leaving 5cm (approx.) of length spare.
                                \n\n4.	Wrap the string around the tuning peg then tighten the machinehead, leaving some slack on the string. Tighten until the string supports itself.
                                \n\n5.	Repeat steps 1-4 for all of the strings.
                                \n\n6.	Tune each string to the correct pitch.
                                \n\n7.	Stretch each string.
                                \n\n8.	To ensure stable tuning repeat steps 6 and 7.</string>
    <string name="level3_intro_title">Level 3: Introduction</string>
    <string name="level3_intro_tv1">Welcome to the third level of GuitarPal!</string>
    <string name="level3_intro_tv2">\nIn this level, you will be introduced to some basic chords. There are two main types of chords, Major and Minor. Major chords sound happy and Minor chords sound sad. Once you learn these chords, try and switch between these chords and play around with them. The chords shown in this level are in the same key of Gmajor so it will sound perfectly fine to jam around between these chords and you can even write 1000s of songs with these chords! So swipe the screen to the left and lets begin!\n\n Or alternatively you can take the level 3 test now!</string>
    <string name="level4_lesson5_title">Lesson 5: 9 Practicing Techniques</string>
    <string name="level4_lesson5_tv1">Now that you have started learning chords and scales, its time to take note of these 9 very useful practicing techniques and tips!</string>
    <string name="level4_lesson5_tv2">\n1.Have your guitar close to hand in your bedroom because it encourages practice!
                                   \n\n 2.	Have a comfortable practise environment. Keep your wrist, hand and back posture correct and you will be able to practice for longer.
                                    \n\n3.	Keeping your wrists relaxed helps stamina and speed and will help prevent cramp.
                                    \n\n4.	Keep trying to push yourself mentally and physically but do not strain your wrists too much. Repetitive strain injury is possible from playing guitar and it can interfere with practice, and it hurts.
                                    \n\n5.	Take regular breaks when you practice (around 5 minutes every half an hour). This enables you to mentally record progress and music you have made, reflecting on what you have done also gives your wrists a break.
                                    \n\n6.	Don\'t play the same material every day otherwise you will develop a "comfort zone" and you will be useless at all music outside that zone.
                                    \n\n7.	Don\'t be afraid to try out different tunings. Sometimes new creative ideas come from playing in different tunings. Also, invest in buying a capo! You won\t regret it and allows you to change key very quickly!
                                    \n\n8.	Warm-ups are essential. They help you play for longer and keep your wrists healthy. Jumping straight into fast and difficult music can be damaging to your wrist and your confidence. Don\'t forget, even professional guitarists can sound terrible without a proper warm up. Or if they haven\'t played in a while.
                                    \n\n9.	Use the metronome in this app regularly. Use it to warm-up with scales.</string>
    <string name="level5_lesson2_title">Lesson 2: Slide</string>
    <string name="level5_lesson2_tv1">Sliding is a form of legato (smooth playing) that is similar to hammer-ons and pull-offs. The technique involves playing a note and then moving the finger to a different fret (keeping the finger pressed firmly against the fretboard as you move).</string>
    <string name="level5_lesson2_tv2"><b>Instructions:</b>
                                    \n\n1. Place your 1st finger on the 5th fret of the 1st string (the highest, thinnest string)
                                    \n\n2. Pluck the string
                                    \n\n3. Whilst holding your finger firmly against the fretboard, drag your finger up to the 7th fret (passing the 6th fret along the way)
                                    \n\nThe slide should sound like a swift transition from the 5th fret through to the 7th fret. The finger should remain pressed against the fretboard at all times, otherwise the sound will be cut.
                                    </string>
    <string name="level5_lesson5_title">Lesson 5: Hammer-ons and Pull-offs</string>
    <string name="level5_lesson5_tv1">A hammer-on is a form of legato (smooth playing) that is achieved by using a fretting hand finger to slam down onto a fret to sound a note without the need for plucking. Below is an example:</string>
    <string name="level5_lesson5_tv2"><b>Instructions:</b>
                                    \n\n1. Place the 1st finger (index finger) of your fretting hand on 5th fret of the high E-string.
                                       \n\n2.	Pluck the high E-string.
                                        \n\n3. Whilst the note is sounding, press the tip of your second finger (middle finger) down onto the 6th fret.
                                        \n\n4. The note on fret 6 should sound as you hammer on.
                                    </string>
    <string name="level5_lesson5_tv3">\nA pull-off is the opposite of a hammer-on. Quickly taking a finger off a fret to sound a note below it (on the same string).</string>
    <string name="level5_lesson5_tv4"><b>Instructions:</b>
                                    \n\n1. With your 2nd finger hold down the 6th fret of the high E-string.
                                        \n2. Whilst holding the 6th fret, use your 1st finger to hold down the 5th fret on the same string.
                                        \n3. Pluck the high E-string.
                                        \n4. Whilst the note is sounding, remove the 2nd finger from the string really quickly. The 5th fret should now sound.
                                        \n\nMake sure the pulled note is the same volume as the picked note. Pulling tip of your finger down slightly as you pull off will produce a louder tone.
                                        \n\nRemember - hammer-ons and pull-offs can both involve open strings. Try out various slurs (hammer-ons and pull-offs) all around the fretboard. Use different fingers and try stretching between frets that are far apart.
                                    </string>
    <string name="level2_test">Level 2 Test</string>
    <string name="level3_test">Level 3 Test</string>
</resources>