<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/level3_intro_title"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/level3_intro_title"
            android:textColor="#ffffff"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/level3_intro_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/level3_intro_title"
            android:text="@string/level3_intro_tv1"
            android:textColor="#ffffff"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/level3_intro_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/level3_intro_tv1"
            android:text="@string/level3_intro_tv2"
            android:textColor="#ffffff"
            android:layout_marginBottom="@dimen/padding_between_views"
            android:textSize="17sp"/>


        <Button
            android:id="@+id/level3TestButton"
            android:background="@drawable/green_button_layout"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/level3_test"
            android:onClick="launchTest"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/level3_intro_tv2"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
</ScrollView>