<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/level5_lesson5_title"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/level5_lesson5_title"
            android:textColor="#ffffff"
            android:layout_marginBottom="@dimen/padding_between_views"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/level5_lesson5_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/level5_lesson5_title"
            android:text="@string/level5_lesson5_tv1"
            android:textColor="#ffffff"
            android:textSize="17sp"/>

        <ImageView
            android:id="@+id/level5_lesson5_iv1"
            android:src="@drawable/hammeron"
            android:layout_marginTop="@dimen/padding_between_views"
            android:layout_marginBottom="@dimen/padding_between_views"
            android:layout_below="@+id/level5_lesson5_tv1"
            android:layout_centerInParent="true"
            android:layout_width="250dp"
            android:layout_height="250dp" />

        <TextView
            android:id="@+id/level5_lesson5_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/level5_lesson5_iv1"
            android:text="@string/level5_lesson5_tv2"
            android:textColor="#ffffff"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/level5_lesson5_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/level5_lesson5_tv2"
            android:text="@string/level5_lesson5_tv3"
            android:textColor="#ffffff"
            android:textSize="17sp"/>


        <ImageView
            android:id="@+id/level5_lesson5_iv2"
            android:src="@drawable/pulloff"
            android:layout_marginTop="@dimen/padding_between_views"
            android:layout_marginBottom="@dimen/padding_between_views"
            android:layout_below="@+id/level5_lesson5_tv3"
            android:layout_centerInParent="true"
            android:layout_width="250dp"
            android:layout_height="250dp" />


        <TextView
            android:id="@+id/level5_lesson5_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/level5_lesson5_iv2"
            android:text="@string/level5_lesson5_tv4"
            android:textColor="#ffffff"
            android:textSize="17sp"/>

    </RelativeLayout>
</ScrollView>