<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

            <TextView
                android:id="@+id/lv1_welcome_title"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/level1_intro_welcome_title"
                android:textColor="#ffffff"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/lv1_intro_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lv1_welcome_title"
                android:text="@string/level1_intro_welcome"
                android:textColor="#ffffff"
                android:textSize="17sp"/>

        <TextView
            android:id="@+id/lv1_intro_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lv1_intro_tv2"
            android:textColor="#ffffff"
            android:text="@string/level1_intro"
            android:textSize="17sp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/lv1_intro_tv3"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
</ScrollView>